--- a/libs/modules/body.less
+++ b/libs/modules/body.less
@@ -17,3 +17,23 @@ body {
 * {
 	box-sizing: border-box;
 }
+
+section {
+    //border-top: 1px solid @gray-6;
+    margin-top: @box-spacing*2.5;
+}
+
+
+.main-content {
+    padding: 0 !important;
+    max-width: 1024px;
+}
+.main-content__right {
+	width: 70%;
+}
+.beta-extent-switcher, .side-nav {
+	width: 30% !important;
+}
+#main {
+    //padding: 0 2rem 0 4rem;
+}
