--- a/libs/modules/nav-steps.less
+++ b/libs/modules/nav-steps.less
@@ -1,95 +1,62 @@
-section {
-    //border-top: 1px solid @gray-6;
-    margin-top: @box-spacing*2;
-}
-
-/**
- * Option 3 variations
- */
 .steps {
-    margin: 0.75em 0;
-    .callout(@heritage-blue-lightest, @callout-border: @heritage-blue-lighter);
+    .callout( @white, @callout-border: @gray-7 );
     .callout--border;
-    padding-bottom: 0;
-    a {
-        cursor: pointer;
-        position: relative;
-        padding: @box-spacing-vertical/2 @box-spacing-horizontal !important;
-        margin: 0 !important;
-        border: none !important;
-        margin: 0 -1rem !important;
-        &:hover {
-            background-color: @heritage-blue-lighter;
-        }
-    }
-    &--ordered a {
-        .steps--number {
-            background: @white;
-            color: @text-color;
-            font-weight: 700;
-            line-height: @box-spacing/2;
-            text-align: center;
-            width: @box-spacing*2;
-            height: @box-spacing*2;
-            border-radius: 50%;
-            -moz-border-radius: 50%;
-            -webkit-border-radius: 50%;
-            display: inline-block;
-            position: absolute;
-            top: 50%;
-            margin-top: -@box-spacing-vertical*1.25 !important;
-        }
-        p {
-            display: inline-block;
-            margin: 0 0 0 @box-spacing*2 + @box-spacing-horizontal !important;
-        }
-    }
-    a {
-        cursor: pointer;
-        .callout( @heritage-blue-lightest, @callout-border: @heritage-blue-lighter );
-        .callout--border;
-        position: relative;
-        padding-top: @box-spacing-vertical;
-        &:hover {
-            background-color: @heritage-blue-lighter;
-        }
+    .callout--border--left;
+    li a:hover, li a.active {
+        background-color: @gray-7;
     }
 }
 
-/**
- * Steps navigation
- */
-.steps--navigation {;
-    color: @text-color;
-    h1 ,h2 ,h3 ,h4 ,h5 ,h6 {
-        background-color: @heritage-blue;
-        color: @white !important;
-        padding: @box-spacing-vertical @box-spacing-horizontal;
-        margin: 0 0 1px 0 !important;
-        font-size: @font-size-small !important;
+.steps--navigation {
+    .callout( @heritage-blue-lightest, @callout-border: @heritage-blue-lighter );
+    .callout--border;
+    li a:hover, li a.active {
+        background-color: @heritage-blue-lighter;
     }
-    .steps--navigation__link {
-        cursor: pointer;
-        width: 100%;
-        display: block;
-        padding: @box-spacing-vertical @box-spacing-horizontal @box-spacing-vertical @box-spacing-horizontal*2;
-        border: none;
-        background-color: @heritage-blue-lightest;
-        margin-bottom: 1px;
-        text-decoration: none !important;
-        font-size: @font-size-small;
-        &:hover {
-            background-color: @heritage-blue-nav;
+}
+
+.steps, .steps--navigation {;
+    color: @text-color;
+    margin-top: 0;
+    padding-bottom: 0;
+    .title {
+        padding: 0 !important;
+        text-decoration: none;
+        border: none !important;
+    }
+    ul {
+        background: none !important;
+        list-style: none;
+        padding: 0;
+        li {
+            padding: 0 !important;
+            margin: 0 !important;
+            a {
+                cursor: pointer;
+                display: block;
+                border: none !important;
+                text-decoration: none !important;
+                margin: 0 -@box-spacing !important;
+                font-size: @font-size-small;
+                padding: @box-spacing-vertical/1.5 @box-spacing-horizontal;
+            }
         }
     }
-    .active {
-        background-color: @heritage-blue-nav;
+    &--ordered {
+        a {
+            padding-left: @box-spacing-horizontal*2 !important;
+        }
+        span {
+            font-weight: 900;
+            margin-right: @box-spacing-horizontal/2;
+            margin-left: -@box-spacing-horizontal;
+            color: @heritage-blue;
+        }
     }
-    span {
-        font-weight: 900;
-        margin-right: @box-spacing-horizontal/2;
-        margin-left: -@box-spacing-horizontal;
-        color: @heritage-blue;
+    h1 ,h2 ,h3 ,h4 ,h5 ,h6 {
+        padding: @box-spacing 0 !important;
+        margin: 0 !important;
+        color: @heritage-blue !important;
     }
 }
 
@@ -170,7 +137,7 @@ section {
             font-size: @font-size-small;
         }
         .active {
-            background-color: @heritage-blue-nav;
+            background-color: @heritage-blue-lighter;
         }
     }
     .close a {
