--- a/libs/site.less
+++ b/libs/site.less
@@ -17,9 +17,9 @@
 @import "modules/collapse";
 @import "modules/forms";
 @import "modules/nav-steps";
+@import "modules/navigation";
 
 // Partials
 @import "partials/utility";
 @import "partials/lists";
 @import "partials/icons";
-
