--- a/public/css/site.css
+++ b/public/css/site.css
@@ -14,6 +14,20 @@ body {
 * {
   box-sizing: border-box;
 }
+section {
+  margin-top: 2.5rem;
+}
+.main-content {
+  padding: 0 !important;
+  max-width: 1024px;
+}
+.main-content__right {
+  width: 70%;
+}
+.beta-extent-switcher,
+.side-nav {
+  width: 30% !important;
+}
 /* Base */
 /**
  * Style Guide
@@ -26,9 +40,6 @@ body {
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   background-color: #ffffff;
-}
-.main-content {
-  max-width: 1024px;
 }
 .starter-template {
   padding: 0px;
@@ -2158,17 +2169,20 @@ hr {
 .collapse-content.default {
   display: block;
 }
+.open + .collapse-content {
+  display: list-item;
+}
 /**
  * Creates various collapse styles using mixin
  * .collapse( @collapse-button-bg, @collapse-button-icon-bg, @collapse-button-text, @collapse-button-close-bg, @collapse-button-close-icon-bg, @collapse-button-close-text )
  */
-.collapse {
+.collapsible {
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #ffffff;
   color: #191926;
 }
-.collapse .collapse-toggle {
+.collapsible .collapse-toggle {
   cursor: pointer;
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
@@ -2180,16 +2194,16 @@ hr {
   background-color: #004b88;
   color: #ffffff;
 }
-.collapse .collapse-toggle h1,
-.collapse .collapse-toggle h2,
-.collapse .collapse-toggle h3,
-.collapse .collapse-toggle h4,
-.collapse .collapse-toggle h5,
-.collapse .collapse-toggle h6 {
+.collapsible .collapse-toggle h1,
+.collapsible .collapse-toggle h2,
+.collapsible .collapse-toggle h3,
+.collapsible .collapse-toggle h4,
+.collapsible .collapse-toggle h5,
+.collapsible .collapse-toggle h6 {
   margin-top: 0;
   color: #ffffff;
 }
-.collapse .collapse-toggle:after {
+.collapsible .collapse-toggle:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   content: "\f067";
@@ -2202,16 +2216,16 @@ hr {
   top: 0;
   line-height: 3em;
 }
-.collapse .collapse-toggle:hover {
+.collapsible .collapse-toggle:hover {
   background-color: #003662;
 }
-.collapse .collapse-toggle:hover:after {
+.collapsible .collapse-toggle:hover:after {
   background-color: #1a2544;
 }
-.collapse .collapse-toggle *:last-child {
+.collapsible .collapse-toggle *:last-child {
   margin-bottom: 0;
 }
-.collapse .collapse-toggle-close {
+.collapsible .collapse-toggle-close {
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
@@ -2223,7 +2237,7 @@ hr {
   color: #004b88;
   margin-top: 1rem !important;
 }
-.collapse .collapse-toggle-close:after {
+.collapsible .collapse-toggle-close:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   padding: 0 1.25rem;
@@ -2236,16 +2250,16 @@ hr {
   background-color: rgba(37, 52, 96, 0.2);
   color: #253460;
 }
-.collapse .collapse-toggle-close:hover {
+.collapsible .collapse-toggle-close:hover {
   background-color: rgba(0, 19, 34, 0.2);
 }
-.collapse .collapse-toggle-close:hover:after {
+.collapsible .collapse-toggle-close:hover:after {
   background-color: rgba(9, 12, 22, 0.2);
 }
-.collapse .open:after {
+.collapsible .open:after {
   content: "\f068";
 }
-.collapse .collapse-content {
+.collapsible .collapse-content {
   padding: 0;
   border: 0;
   margin: -0.75rem -1rem 0.75rem -1rem !important;
@@ -2253,13 +2267,13 @@ hr {
   border: solid #253460;
   border-width: 1px;
 }
-.collapse--aqua {
+.collapsible--aqua {
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #ffffff;
   color: #191926;
 }
-.collapse--aqua .collapse-toggle {
+.collapsible--aqua .collapse-toggle {
   cursor: pointer;
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
@@ -2271,16 +2285,16 @@ hr {
   background-color: #81cec6;
   color: #ffffff;
 }
-.collapse--aqua .collapse-toggle h1,
-.collapse--aqua .collapse-toggle h2,
-.collapse--aqua .collapse-toggle h3,
-.collapse--aqua .collapse-toggle h4,
-.collapse--aqua .collapse-toggle h5,
-.collapse--aqua .collapse-toggle h6 {
+.collapsible--aqua .collapse-toggle h1,
+.collapsible--aqua .collapse-toggle h2,
+.collapsible--aqua .collapse-toggle h3,
+.collapsible--aqua .collapse-toggle h4,
+.collapsible--aqua .collapse-toggle h5,
+.collapsible--aqua .collapse-toggle h6 {
   margin-top: 0;
   color: #ffffff;
 }
-.collapse--aqua .collapse-toggle:after {
+.collapsible--aqua .collapse-toggle:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   content: "\f067";
@@ -2293,16 +2307,16 @@ hr {
   top: 0;
   line-height: 3em;
 }
-.collapse--aqua .collapse-toggle:hover {
+.collapsible--aqua .collapse-toggle:hover {
   background-color: #65c3ba;
 }
-.collapse--aqua .collapse-toggle:hover:after {
+.collapsible--aqua .collapse-toggle:hover:after {
   background-color: #45b1a6;
 }
-.collapse--aqua .collapse-toggle *:last-child {
+.collapsible--aqua .collapse-toggle *:last-child {
   margin-bottom: 0;
 }
-.collapse--aqua .collapse-toggle-close {
+.collapsible--aqua .collapse-toggle-close {
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
@@ -2314,7 +2328,7 @@ hr {
   color: #81cec6;
   margin-top: 1rem !important;
 }
-.collapse--aqua .collapse-toggle-close:after {
+.collapsible--aqua .collapse-toggle-close:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   padding: 0 1.25rem;
@@ -2327,16 +2341,16 @@ hr {
   background-color: rgba(92, 192, 181, 0.2);
   color: #5cc0b5;
 }
-.collapse--aqua .collapse-toggle-close:hover {
+.collapsible--aqua .collapse-toggle-close:hover {
   background-color: rgba(65, 168, 157, 0.2);
 }
-.collapse--aqua .collapse-toggle-close:hover:after {
+.collapsible--aqua .collapse-toggle-close:hover:after {
   background-color: rgba(51, 131, 123, 0.2);
 }
-.collapse--aqua .open:after {
+.collapsible--aqua .open:after {
   content: "\f068";
 }
-.collapse--aqua .collapse-content {
+.collapsible--aqua .collapse-content {
   padding: 0;
   border: 0;
   margin: -0.75rem -1rem 0.75rem -1rem !important;
@@ -2344,13 +2358,13 @@ hr {
   border: solid #5cc0b5;
   border-width: 1px;
 }
-.collapse--green {
+.collapsible--green {
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #ffffff;
   color: #191926;
 }
-.collapse--green .collapse-toggle {
+.collapsible--green .collapse-toggle {
   cursor: pointer;
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
@@ -2362,16 +2376,16 @@ hr {
   background-color: #5e8e33;
   color: #ffffff;
 }
-.collapse--green .collapse-toggle h1,
-.collapse--green .collapse-toggle h2,
-.collapse--green .collapse-toggle h3,
-.collapse--green .collapse-toggle h4,
-.collapse--green .collapse-toggle h5,
-.collapse--green .collapse-toggle h6 {
+.collapsible--green .collapse-toggle h1,
+.collapsible--green .collapse-toggle h2,
+.collapsible--green .collapse-toggle h3,
+.collapsible--green .collapse-toggle h4,
+.collapsible--green .collapse-toggle h5,
+.collapsible--green .collapse-toggle h6 {
   margin-top: 0;
   color: #ffffff;
 }
-.collapse--green .collapse-toggle:after {
+.collapsible--green .collapse-toggle:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   content: "\f067";
@@ -2384,16 +2398,16 @@ hr {
   top: 0;
   line-height: 3em;
 }
-.collapse--green .collapse-toggle:hover {
+.collapsible--green .collapse-toggle:hover {
   background-color: #4b7229;
 }
-.collapse--green .collapse-toggle:hover:after {
+.collapsible--green .collapse-toggle:hover:after {
   background-color: #334c1b;
 }
-.collapse--green .collapse-toggle *:last-child {
+.collapsible--green .collapse-toggle *:last-child {
   margin-bottom: 0;
 }
-.collapse--green .collapse-toggle-close {
+.collapsible--green .collapse-toggle-close {
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
@@ -2405,7 +2419,7 @@ hr {
   color: #5e8e33;
   margin-top: 1rem !important;
 }
-.collapse--green .collapse-toggle-close:after {
+.collapsible--green .collapse-toggle-close:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   padding: 0 1.25rem;
@@ -2418,16 +2432,16 @@ hr {
   background-color: rgba(69, 104, 38, 0.2);
   color: #456826;
 }
-.collapse--green .collapse-toggle-close:hover {
+.collapsible--green .collapse-toggle-close:hover {
   background-color: rgba(44, 67, 24, 0.2);
 }
-.collapse--green .collapse-toggle-close:hover:after {
+.collapsible--green .collapse-toggle-close:hover:after {
   background-color: rgba(19, 29, 11, 0.2);
 }
-.collapse--green .open:after {
+.collapsible--green .open:after {
   content: "\f068";
 }
-.collapse--green .collapse-content {
+.collapsible--green .collapse-content {
   padding: 0;
   border: 0;
   margin: -0.75rem -1rem 0.75rem -1rem !important;
@@ -2435,13 +2449,13 @@ hr {
   border: solid #456826;
   border-width: 1px;
 }
-.collapse--red {
+.collapsible--red {
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #ffffff;
   color: #191926;
 }
-.collapse--red .collapse-toggle {
+.collapsible--red .collapse-toggle {
   cursor: pointer;
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
@@ -2453,16 +2467,16 @@ hr {
   background-color: #df3034;
   color: #ffffff;
 }
-.collapse--red .collapse-toggle h1,
-.collapse--red .collapse-toggle h2,
-.collapse--red .collapse-toggle h3,
-.collapse--red .collapse-toggle h4,
-.collapse--red .collapse-toggle h5,
-.collapse--red .collapse-toggle h6 {
+.collapsible--red .collapse-toggle h1,
+.collapsible--red .collapse-toggle h2,
+.collapsible--red .collapse-toggle h3,
+.collapsible--red .collapse-toggle h4,
+.collapsible--red .collapse-toggle h5,
+.collapsible--red .collapse-toggle h6 {
   margin-top: 0;
   color: #ffffff;
 }
-.collapse--red .collapse-toggle:after {
+.collapsible--red .collapse-toggle:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   content: "\f067";
@@ -2475,16 +2489,16 @@ hr {
   top: 0;
   line-height: 3em;
 }
-.collapse--red .collapse-toggle:hover {
+.collapsible--red .collapse-toggle:hover {
   background-color: #ca1f23;
 }
-.collapse--red .collapse-toggle:hover:after {
+.collapsible--red .collapse-toggle:hover:after {
   background-color: #9d181b;
 }
-.collapse--red .collapse-toggle *:last-child {
+.collapsible--red .collapse-toggle *:last-child {
   margin-bottom: 0;
 }
-.collapse--red .collapse-toggle-close {
+.collapsible--red .collapse-toggle-close {
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
@@ -2496,7 +2510,7 @@ hr {
   color: #df3034;
   margin-top: 1rem !important;
 }
-.collapse--red .collapse-toggle-close:after {
+.collapsible--red .collapse-toggle-close:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   padding: 0 1.25rem;
@@ -2509,16 +2523,16 @@ hr {
   background-color: rgba(191, 29, 33, 0.2);
   color: #bf1d21;
 }
-.collapse--red .collapse-toggle-close:hover {
+.collapsible--red .collapse-toggle-close:hover {
   background-color: rgba(146, 23, 25, 0.2);
 }
-.collapse--red .collapse-toggle-close:hover:after {
+.collapsible--red .collapse-toggle-close:hover:after {
   background-color: rgba(102, 16, 18, 0.2);
 }
-.collapse--red .open:after {
+.collapsible--red .open:after {
   content: "\f068";
 }
-.collapse--red .collapse-content {
+.collapsible--red .collapse-content {
   padding: 0;
   border: 0;
   margin: -0.75rem -1rem 0.75rem -1rem !important;
@@ -2760,22 +2774,16 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #6fc7be;
 }
-section {
-  margin-top: 2rem;
-}
-/**
- * Option 3 variations
- */
 .steps {
-  margin: 0.75em 0;
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
-  background-color: #f2f8ff;
+  background-color: #ffffff;
   color: #191926;
-  border: 0px #d5ecff solid;
+  border: 0px #ececec solid;
   display: block;
   border-width: 1px;
-  padding-bottom: 0;
+  border-left-width: 0.5rem;
+  padding-left: 1rem;
 }
 .steps h1,
 .steps h2,
@@ -2784,7 +2792,7 @@ section {
   font-size: 1.5rem;
 }
 .steps a {
-  border-bottom-color: #d5ecff;
+  border-bottom-color: #ececec;
 }
 .steps > *:first-child {
   padding-top: 0.75rem;
@@ -2809,9 +2817,9 @@ section {
   padding: 0.75rem 4.5rem 0.75rem 1rem;
   margin: 0.75rem -1rem -0.75rem -1rem !important;
   border: none;
-  background-color: #d9e1ff;
+  background-color: #f2f2f2;
   color: #191926;
-  border-bottom: 1px solid #d5ecff;
+  border-bottom: 1px solid #ececec;
   text-decoration: none !important;
   position: relative;
 }
@@ -2820,7 +2828,7 @@ section {
   font-family: 'FontAwesome';
   content: "\f054";
   color: #191926;
-  background-color: #bfcdff;
+  background-color: #e6e6e6;
   height: 100%;
   position: absolute;
   right: 0;
@@ -2830,11 +2838,11 @@ section {
   text-align: center;
 }
 .steps .callout__link:hover {
-  background-color: #bfcdff;
+  background-color: #e6e6e6;
   color: #191926;
 }
 .steps .callout__link:hover:after {
-  background-color: #8ca4ff;
+  background-color: #cccccc;
 }
 .steps .callout__link--anchor:after {
   content: "\f063";
@@ -2842,39 +2850,11 @@ section {
 .steps .callout__link:last-child {
   border: none;
 }
-.steps a {
-  cursor: pointer;
-  position: relative;
-  padding: 0.375rem 1rem !important;
-  margin: 0 !important;
-  border: none !important;
-  margin: 0 -1rem !important;
+.steps li a:hover,
+.steps li a.active {
+  background-color: #ececec;
 }
-.steps a:hover {
-  background-color: #d5ecff;
-}
-.steps--ordered a .steps--number {
-  background: #ffffff;
-  color: #191926;
-  font-weight: 700;
-  line-height: 0.5rem;
-  text-align: center;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  display: inline-block;
-  position: absolute;
-  top: 50%;
-  margin-top: -0.9375rem !important;
-}
-.steps--ordered a p {
-  display: inline-block;
-  margin: 0 0 0 3rem !important;
-}
-.steps a {
-  cursor: pointer;
+.steps--navigation {
   padding: 0 1rem 0.75rem 1rem;
   margin: 0.75rem 0;
   background-color: #f2f8ff;
@@ -2882,36 +2862,34 @@ section {
   border: 0px #d5ecff solid;
   display: block;
   border-width: 1px;
-  position: relative;
-  padding-top: 0.75rem;
 }
-.steps a h1,
-.steps a h2,
-.steps a h3 {
+.steps--navigation h1,
+.steps--navigation h2,
+.steps--navigation h3 {
   color: #191926 !important;
   font-size: 1.5rem;
 }
-.steps a a {
+.steps--navigation a {
   border-bottom-color: #d5ecff;
 }
-.steps a > *:first-child {
+.steps--navigation > *:first-child {
   padding-top: 0.75rem;
 }
-.steps a h1:first-child,
-.steps a h2:first-child,
-.steps a h3:first-child,
-.steps a h4:first-child,
-.steps a h5:first-child,
-.steps a h6:first-child {
+.steps--navigation h1:first-child,
+.steps--navigation h2:first-child,
+.steps--navigation h3:first-child,
+.steps--navigation h4:first-child,
+.steps--navigation h5:first-child,
+.steps--navigation h6:first-child {
   margin-top: 0;
 }
-.steps a li:first-child {
+.steps--navigation li:first-child {
   padding-top: 0;
 }
-.steps a > *:last-child {
+.steps--navigation > *:last-child {
   margin-bottom: 0 !important;
 }
-.steps a .callout__link {
+.steps--navigation .callout__link {
   cursor: pointer;
   display: block;
   padding: 0.75rem 4.5rem 0.75rem 1rem;
@@ -2923,7 +2901,7 @@ section {
   text-decoration: none !important;
   position: relative;
 }
-.steps a .callout__link:after {
+.steps--navigation .callout__link:after {
   box-sizing: border-box;
   font-family: 'FontAwesome';
   content: "\f054";
@@ -2937,62 +2915,82 @@ section {
   width: 3em;
   text-align: center;
 }
-.steps a .callout__link:hover {
+.steps--navigation .callout__link:hover {
   background-color: #bfcdff;
   color: #191926;
 }
-.steps a .callout__link:hover:after {
+.steps--navigation .callout__link:hover:after {
   background-color: #8ca4ff;
 }
-.steps a .callout__link--anchor:after {
+.steps--navigation .callout__link--anchor:after {
   content: "\f063";
 }
-.steps a .callout__link:last-child {
+.steps--navigation .callout__link:last-child {
   border: none;
 }
-.steps a:hover {
+.steps--navigation li a:hover,
+.steps--navigation li a.active {
   background-color: #d5ecff;
 }
-/**
- * Steps navigation
- */
+.steps,
 .steps--navigation {
   color: #191926;
+  margin-top: 0;
+  padding-bottom: 0;
 }
-.steps--navigation h1,
-.steps--navigation h2,
-.steps--navigation h3,
-.steps--navigation h4,
-.steps--navigation h5,
-.steps--navigation h6 {
-  background-color: #004b88;
-  color: #ffffff !important;
-  padding: 0.75rem 1rem;
-  margin: 0 0 1px 0 !important;
-  font-size: 0.875rem !important;
+.steps .title,
+.steps--navigation .title {
+  padding: 0 !important;
+  text-decoration: none;
+  border: none !important;
 }
-.steps--navigation .steps--navigation__link {
+.steps ul,
+.steps--navigation ul {
+  background: none !important;
+  list-style: none;
+  padding: 0;
+}
+.steps ul li,
+.steps--navigation ul li {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.steps ul li a,
+.steps--navigation ul li a {
   cursor: pointer;
-  width: 100%;
   display: block;
-  padding: 0.75rem 1rem 0.75rem 2rem;
-  border: none;
-  background-color: #f2f8ff;
-  margin-bottom: 1px;
+  border: none !important;
   text-decoration: none !important;
+  margin: 0 -1rem !important;
   font-size: 0.875rem;
+  padding: 0.5rem 1rem;
 }
-.steps--navigation .steps--navigation__link:hover {
-  background-color: #dce5f1;
+.steps--ordered a,
+.steps--navigation--ordered a {
+  padding-left: 2rem !important;
 }
-.steps--navigation .active {
-  background-color: #dce5f1;
-}
-.steps--navigation span {
+.steps--ordered span,
+.steps--navigation--ordered span {
   font-weight: 900;
   margin-right: 0.5rem;
   margin-left: -1rem;
   color: #004b88;
+}
+.steps h1,
+.steps--navigation h1,
+.steps h2,
+.steps--navigation h2,
+.steps h3,
+.steps--navigation h3,
+.steps h4,
+.steps--navigation h4,
+.steps h5,
+.steps--navigation h5,
+.steps h6,
+.steps--navigation h6 {
+  padding: 1rem 0 !important;
+  margin: 0 !important;
+  color: #004b88 !important;
 }
 .beta-dap-menu-accordion__sections {
   margin-bottom: 0.75rem !important;
@@ -3069,7 +3067,7 @@ section {
   font-size: 0.875rem;
 }
 .steps--navigation--overlay li .active {
-  background-color: #dce5f1;
+  background-color: #d5ecff;
 }
 .steps--navigation--overlay .close a {
   cursor: pointer;
@@ -3100,6 +3098,27 @@ section {
 .open li a {
   visibility: visible;
   display: block !important;
+}
+.nav--beta {
+  background-color: red;
+  padding: 0;
+}
+.nav--beta a {
+  border: none;
+  color: #191926 !important;
+}
+.nav--beta li {
+  padding: 0.75rem 1rem !important;
+  border-bottom: 1px solid white;
+}
+.nav--beta .collapse-toggle {
+  background-color: #ffbf47;
+}
+.nav--beta ul {
+  margin: -0.75rem -1rem;
+}
+.nav--beta ul li {
+  background-color: #ffd17a;
 }
 /**
  * UTILITY
