--- a/libs/modules/body.less
+++ b/libs/modules/body.less
@@ -25,14 +25,14 @@ section {
 
 
 .main-content {
-    padding: 0 !important;
-    max-width: 1024px;
+    //padding: 0 !important;
+    //max-width: 1024px;
 }
 .main-content__right {
 	width: 70%;
 }
 .beta-extent-switcher, .side-nav {
-	width: 30% !important;
+	width: 30%;
 }
 #main {
     //padding: 0 2rem 0 4rem;
