--- a/libs/modules/collapse.less
+++ b/libs/modules/collapse.less
@@ -113,8 +113,8 @@
 .collapse-content.default {
 	display: block;
 }
-.open + .collapse-content {
-	display: list-item;
+.start-open {
+	display: block;
 }
 
 /**
