--- a/libs/modules/colors.less
+++ b/libs/modules/colors.less
@@ -7,7 +7,6 @@
  * Using the convention of 'base, base-dark, base-darker, base-light, base-lighter'.
  */
 
-
 /***************************************************************************
  * PRIMARY
  */
@@ -67,6 +66,17 @@
 @beta-yellow:           	#FFBF47;
 @beta-yellow-light:     	lighten(@beta-yellow, 25%);
 
+/***************************************************************************
+ * NAVIGATION COLOURS
+ */
+
+@colour-nav-1: #FEF7D8;
+@colour-nav-2: #FEF9E5;
+@colour-nav-3: #FFFCF2;
+@colour-nav-4: #EDEDED;
+@colour-nav-5: #F7F7F7;
+@colour-nav-6: #FCFCFC;
+@colour-nav-7: #FFF;
 
 /***************************************************************************
  * COLORS
@@ -98,6 +108,32 @@
 @aqua-tint:        			lighten(@aqua, 15%);
 @aqua-light:       			lighten(@aqua, 25%);
 */
+@blue: #004B88;
+@blue-40: #99B7C4;
+@blue-30: #B2C9DB;
+@blue-5: #F2F6F9;
+@casblue: #0057B9;
+@yellow: #FCBB69;
+@lightyellow: #FDE37E;
+@yellow-30: #FEF7D8;
+@yellow-20: #FEF9E5;
+@yellow-10: #FFFCF2;
+@aqua: #90CE9C;
+@purple: #57486B;
+@purple-homepage: #B5AFD7;
+@teal: #006278;
+@pink: #FBC0AD;
+@green: #00553F;
+@green-40: #D3EBD7;
+@mauve: #B5AFD7;
+@orange: #EC7A3C;
+@grey: #D9DADA;
+@red: #7F364F;
+@backgroundGrey: #47565b;
+@colour-background: #FDFAEF;
+@dark-grey: #555;
+@notice-orange: #FFEBC6;
+@notice-orange-dark: #FFBF47;
 
 /***************************************************************************
  * STATE COLORS
