--- a/libs/existing/inc/beta/breadcrumb.less
+++ b/libs/existing/inc/beta/breadcrumb.less
@@ -14,7 +14,7 @@
     width: 100%;
 
     .main-breadcrumb__content.breadcrumb {
-        max-width: 1366px;
+        width: @screen-lg-min;
         margin: 0 auto;   
         background-color: transparent;
     }
