--- a/libs/existing/inc/beta/section-notice.less
+++ b/libs/existing/inc/beta/section-notice.less
@@ -1,17 +1,11 @@
-﻿.beta {
-    
-    .main-breadcrumb + .section-notice {
-        margin-top: 0;
+﻿.main-breadcrumb + .section-notice {
+    margin-top: 0;
 
-        @media( min-width: @screen-xs-max ) {
-             margin-top: -1em;
-        }
+    @media( min-width: @screen-xs-max ) {
+         margin-top: -1em;
     }
-
-    .section-notice__content {
-        padding-top: 1em;
-    }
-
-    
 }
 
+.section-notice__content {
+    padding-top: 1em;
+}
