--- a/libs/existing/inc/beta/type.less
+++ b/libs/existing/inc/beta/type.less
@@ -9,7 +9,7 @@
  * Using 'dap-' prefix to avoid name clashes with existing styles (Digital alpha project)
  */
 
-.beta .main-container {
+.main-container {
     h1, h2, h3, h4, h5, h6 {
         line-height: @dap-line-height-heading;
         color: @dap-heading-primary-color;
@@ -76,7 +76,6 @@
     // Site wide links
     a {
         color: @dap-link-color;
-        text-decoration: underline;
 
         &:hover,
         &:focus {
