--- a/libs/existing/inc/header.less
+++ b/libs/existing/inc/header.less
@@ -24,12 +24,13 @@
 }
 
 .main-header__content {
-    .limit-width;
+    .limit-width-old;
     .clearfix;
     padding: 0 1em .5em 1em;
 }
 
 .main-header__logo {
+    border: none;
     float: left;
     margin-top: .7em; // Slightly better centering
     max-width: 30%; // For old IE
@@ -64,6 +65,7 @@
     padding: 0 .4em;
     display: inline-block;
     white-space: nowrap;
+    border: none;
 }
 
 .main-header__top-nav__link--current {
