--- a/libs/existing/inc/main-nav.less
+++ b/libs/existing/inc/main-nav.less
@@ -21,7 +21,7 @@ html[lang="en-SCT"] .main-nav {
 
 
 .nav-list-primary {
-    .limit-width;
+    .limit-width-old;
     list-style: none;
     // 12px makes the first items label inline with the page edge
     padding: 0 20px 0 12px;
