--- a/libs/existing/inc/section-notice.less
+++ b/libs/existing/inc/section-notice.less
@@ -3,7 +3,7 @@
 }
 
 .section-notice__content {
-    .limit-width();
+    .limit-width;
     padding: 0 1em;
     overflow: hidden; // Prevent collapsing margins
     margin-bottom: 1em;
