--- a/libs/modules/nav-steps.less
+++ b/libs/modules/nav-steps.less
@@ -11,7 +11,7 @@
     .callout( @heritage-blue-lightest );
     .callout--border;
     ul {
-        background-color: red !important;
+        //background-color: none !important;
     }
     li a:hover, li a.active {
         background-color: @heritage-blue-lighter;
