--- a/libs/site-2.less
+++ b/libs/site-2.less
@@ -1,3 +1,4 @@
+// Exitsting styles
 	//@import "existing/inc/magic-numbers";
 	@import "existing/inc/mixins";
 	@import "existing/inc/normalise";
@@ -58,12 +59,10 @@
 	@import "existing/inc/bureau-search";
 	@import "existing/inc/environment-marker";
 
-	// New stuff that needs to go after the old stuff
-
-		// Beta stuff
+	// Beta files
 		@import "existing/inc/beta/colors";
 		@import "existing/inc/beta/variables";
-		@import "existing/inc/beta/type";
+		//@import "existing/inc/beta/type";
 
 		@import "existing/inc/beta/base";
 		@import "existing/inc/beta/status";
@@ -87,7 +86,7 @@
 	@import "existing/inc/episerver";
 
 // For styleguide files only
-@import "modules/body";
+//@import "modules/body";
 @import "styleguide/guide";
 
 // Variable files
