--- a/libs/existing/inc/beta/sidebar-navigation.less
+++ b/libs/existing/inc/beta/sidebar-navigation.less
@@ -3,70 +3,69 @@
  *
  * Beta sidebar navigation for content pages.
  */
- 
-.beta {
-    .side-nav {
-        .main-content__sidebar;
+
+.side-nav {
+    .main-content__sidebar;
+    
+    @media screen and (max-width: @screen-xs-max) {
+        float: none;
+        width: 100%;
+    }
+    
+    ul {
+        //background-color: @dap-white;
+        color: @dap-text-color;
+        list-style: none;
+        padding: 0;
+    }
+    li {
+        //font-size: @dap-font-size-small;
+        padding: 0;
+        margin: 0;
+        //border-bottom: 0.1em solid @beta-blue-light;
+    }
+    li:last-child {
+       border-bottom: none;
+    }
+    li.current {
+        //font-size: @dap-font-size-small;
+        font-weight: @dap-font-weight-bold;
+        background-color: @beta-blue-light-tint;
+        padding: 0.4em 0.6em 0.6em 0.6em;
+        margin: 0;
+        border-bottom: 0.1em solid @beta-blue-light;
+    }
+    li.title,
+    li.side-nav__group {
+        //font-size: @dap-font-size-small;
+        font-weight: @dap-font-weight-bold;
+        background-color: @beta-blue-light;
+        color: @dap-heritage-blue;
+        margin: 0;
+        border-bottom: 0.1em solid @dap-white;
         
-        @media screen and (max-width: @screen-xs-max) {
-            float: none;
-            width: 100%;
+        .side-nav__group-title {
+            display: block;
+            padding: 0.7em 0.6em 0.9em 0.6em;
         }
+    }
+    li.side-nav__item {
+        padding: 0.4em 0.6em 0.6em 0.6em;
         
-        ul {
-            background-color: @dap-white;
-            color: @dap-text-color;
-            list-style: none;
+        a {
+            text-decoration: none;
             padding: 0;
         }
-        li {
-/*          font-size: @dap-font-size-small;
-*/          padding: 0;
-            margin: 0;
-/*          border-bottom: 0.1em solid @beta-blue-light;
-*/        }
-        li:last-child {
-           border-bottom: none;
-        }
-        li.current {
-/*          font-size: @dap-font-size-small;
-*/          font-weight: @dap-font-weight-bold;
+        
+        &.-current {
+            font-weight: @dap-font-weight-bold;
             background-color: @beta-blue-light-tint;
-            padding: 0.4em 0.6em 0.6em 0.6em;
-            margin: 0;
             border-bottom: 0.1em solid @beta-blue-light;
         }
-        li.title,
-        li.side-nav__group {
-/*          font-size: @dap-font-size-small;
-*/          font-weight: @dap-font-weight-bold;
-            background-color: @beta-blue-light;
-            color: @dap-heritage-blue;
-            margin: 0;
-            border-bottom: 0.1em solid @dap-white;
-            
-            .side-nav__group-title {
-                display: block;
-                padding: 0.7em 0.6em 0.9em 0.6em;
-            }
-        }
-        li.side-nav__item {
-            padding: 0.4em 0.6em 0.6em 0.6em;
-            
-            a {
-                text-decoration: none;
-                padding: 0;
-            }
-            
-            &.-current {
-                font-weight: @dap-font-weight-bold;
-                background-color: @beta-blue-light-tint;
-                border-bottom: 0.1em solid @beta-blue-light;
-            }
-            
-            &:hover {
-                background-color: @dap-gray-6;
-            }
+        
+        &:hover {
+            background-color: @dap-gray-6;
         }
     }
 }
+
