--- a/libs/existing/inc/framework.less
+++ b/libs/existing/inc/framework.less
@@ -1,5 +1,10 @@
 ﻿// For top level elements limit the page width
 .limit-width() {
+    max-width: @screen-lg-min;
+    margin: auto;
+    clear: left;
+}
+.limit-width-old() {
     max-width: @max-page-width;
     margin: auto;
     clear: left;
