--- a/libs/existing/inc/global.less
+++ b/libs/existing/inc/global.less
@@ -6,41 +6,41 @@
 // That does mean it is using faux bold for all bold, but that's the penalty for using old browsers
 @font-face {
 	font-family: 'open_sans';
-	src: url('/static/font/OpenSans-Regular-webfont.eot');
-	src: url('/static/font/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-		    url('/static/font/OpenSans-Regular-webfont.woff') format('woff'),
-		    url('/static/font/OpenSans-Regular-webfont.ttf') format('truetype'),
-		    url('/static/font/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+	src: url('../assets/font/OpenSans-Regular-webfont.eot');
+	src: url('../assets/font/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		    url('../assets/font/OpenSans-Regular-webfont.woff') format('woff'),
+		    url('../assets/font/OpenSans-Regular-webfont.ttf') format('truetype'),
+		    url('../assets/font/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
 	font-weight: normal;
 }
 
 @font-face {
 	font-family: 'open_sans';
-	src: url('/static/font/OpenSans-Semibold-webfont.eot');
-	src: url('/static/font/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-		    url('/static/font/OpenSans-Semibold-webfont.woff') format('woff'),
-		    url('/static/font/OpenSans-Semibold-webfont.ttf') format('truetype'),
-		    url('/static/font/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
+	src: url('../assets/font/OpenSans-Semibold-webfont.eot');
+	src: url('../assets/font/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
+		    url('../assets/font/OpenSans-Semibold-webfont.woff') format('woff'),
+		    url('../assets/font/OpenSans-Semibold-webfont.ttf') format('truetype'),
+		    url('../assets/font/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
 	font-weight: 600;
 }
 
 @font-face {
 	font-family: 'open_sans';
-	src: url('/static/font/OpenSans-Bold-webfont.eot');
-	src: url('/static/font/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-		    url('/static/font/OpenSans-Bold-webfont.woff') format('woff'),
-		    url('/static/font/OpenSans-Bold-webfont.ttf') format('truetype'),
-		    url('/static/font/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
+	src: url('../assets/font/OpenSans-Bold-webfont.eot');
+	src: url('../assets/font/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+		    url('../assets/font/OpenSans-Bold-webfont.woff') format('woff'),
+		    url('../assets/font/OpenSans-Bold-webfont.ttf') format('truetype'),
+		    url('../assets/font/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
 	font-weight: bold;
 }
 
 @font-face {
 	font-family: 'open_sans';
-	src: url('/static/font/opensans-extrabold-webfont.eot');
-	src: url('/static/font/opensans-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
-		    url('/static/font/opensans-extrabold-webfont.woff') format('woff'),
-		    url('/static/font/opensans-extrabold-webfont.ttf') format('truetype'),
-		    url('/static/font/opensans-extrabold-webfont.svg#open_sansbold') format('svg');
+	src: url('../assets/font/opensans-extrabold-webfont.eot');
+	src: url('../assets/font/opensans-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+		    url('../assets/font/opensans-extrabold-webfont.woff') format('woff'),
+		    url('../assets/font/opensans-extrabold-webfont.ttf') format('truetype'),
+		    url('../assets/font/opensans-extrabold-webfont.svg#open_sansbold') format('svg');
 	font-weight: 800;
 }
 
@@ -97,7 +97,7 @@ img {
 /* External links */
 .a-external:after { /* This method is easier to deploy across the site than just using padding */
     content: "";
-    background: url("/static/images/icons/icon_external.png") no-repeat center right;
+    background: url("../assets/images/icons/icon_external.png") no-repeat center right;
     padding-right: 18px;
     padding-right: calc(~"13px + .3em"); /* image is 13px wide.  ~ to suppress LESS calculating for us grrr*/
 }
@@ -112,7 +112,7 @@ img {
     }
 
     .a-external:after {
-        background-image: url("/static/images/icons/icon_external_fff.png");
+        background-image: url("../assets/images/icons/icon_external_fff.png");
     }
 }
 
@@ -134,7 +134,7 @@ img {
     }
 
     .a-external:after {
-        background-image: url("/static/images/icons/icon_external_fff.png");
+        background-image: url("../assets/images/icons/icon_external_fff.png");
     }
 }
 
@@ -199,8 +199,8 @@ ul {margin: 1em 0;}
 li {margin-bottom: .5em;}
 
 .li--arrow {
-    list-style-image: url("/static/images/arrow-bullet.png");
-    list-style-image: url("/static/images/arrow-bullet.svg");
+    list-style-image: url("../assets/images/arrow-bullet.png");
+    list-style-image: url("../assets/images/arrow-bullet.svg");
 }
 ul.li--arrow {
     // Messy - if applied to the list it changes the padding, for the element it just changes the icon
@@ -208,8 +208,8 @@ ul.li--arrow {
 }
 
 .li--double-arrow {
-    list-style-image: url("/static/images/angle-double-right.png");
-    list-style-image: url("/static/images/angle-double-right.svg");
+    list-style-image: url("../assets/images/angle-double-right.png");
+    list-style-image: url("../assets/images/angle-double-right.svg");
 }
 
 .arrow-list {
@@ -218,13 +218,13 @@ ul.li--arrow {
     padding-left: .5em;
 
     & > li {
-        background: url("/static/layout/blue-arrow.gif") left .5em no-repeat;
+        background: url("../assets/layout/blue-arrow.gif") left .5em no-repeat;
         padding-left: 1.2em;
     }
 }
 
 .view-all { 
-    background: url("/static/layout/view-all.png") left center no-repeat;
+    background: url("../assets/layout/view-all.png") left center no-repeat;
     border-top: 1px solid #ccc;
     padding-left: 1.4em;
     margin-left: -.2em; /* It's a wide image.  This improves the spacing */
