--- a/libs/modules/colors.less
+++ b/libs/modules/colors.less
@@ -59,7 +59,7 @@
 @beta-green-light:          lighten(@beta-green, 45%); // NEEDS TO BE CHECKED
 @beta-green-lighter:        lighten(@beta-green, 60%); // NEEDS TO BE CHECKED
 @beta-blue:      			#003C64;
-@beta-blue-light:       	lighten(@beta-blue, 20%);
+@beta-blue-light:       	#dce5f1;
 @beta-blue-lighter:  		lighten(@beta-blue, 70%);
 @beta-aqua:             	#81CEC6;
 @beta-aqua-light:          	lighten(@beta-aqua, 15%);
